# internum-api

./: .cz.toml  .gitguardian.yml  .gitignore  README.md  pyproject.toml
.github/workflows/: gitguardian.yml  lint-and-test.yaml
internum/: app.py
internum/api/: main.py  schemas.py
internum/core/: database.py  email.py  permissions.py  schemas.py  security.py  settings.py
internum/core/models/: __init__.py  mixins.py
internum/core/scheduler/: scheduler.py
internum/infra/: compose.yaml  orchestrate.sh
internum/modules/auth/: jobs.py  models.py  routers.py  schemas.py
internum/modules/home/: routers.py  schemas.py  services.py
internum/modules/legal_briefs/: models.py  routers.py  schemas.py
internum/modules/notices/: models.py  routers.py  schemas.py
internum/modules/users/: enums.py  models.py  routers.py  schemas.py
internum/scripts/: seed_admin.py
migrations/: env.py
migrations/versions/: 014d2c766893_exclude_updated_at_field_in_notices_.py  504a0de55569_initial_tables.py  51abf775556a_add_title_to_legalbriefrevision_and_.py  563da3e3f296_add_audit_fields_to_notice.py  57bbc6ed1255_tornar_created_by_id_non_nullable_no_.py  6c56393899c3_remove_canceled_at_from_legal_briefs.py  6c5a94a99d86_added_canceled_in_loanstatus.py  76111aa7edf7_include_legalbrief_and_.py  82c8820412cd_init_recreate_schema_from_scratch.py  835e9b44a17c_added_canceled_in_loanstatus.py  91824b5b3789_remove_user_id_from_loans_table.py  9d30e311c969_add_birthday_field_to_users.py  a06ab1b897cb_added_cancelled_in_loanstatus.py  a82cf7715833_init_recreate_schema_from_scratch.py  bf7369b00cc3_add_audit_fields_and_cancellation_.py  d2d44339a757_include_canceled_fields_in_legalbrief_.py  d330796886be_remove_user_id_from_notice.py  d5c9eeade2e7_create_users_table.py  dcee4dde567d_create_notice_reads_table.py  e4febf87d605_add_password_reset_tokens_table_for_.py  f3852c2fbc83_init.py  f98572e18b6a_fix_explicit_foreign_keys_and_defaults_.py
tests/: conftest.py  test_auth.py  test_home.py  test_jobs.py  test_legal_brief.py  test_library_books.py  test_library_loans.py  test_notice.py  test_security.py  test_status.py  test_user.py
